--- a/src/App.css
+++ b/src/App.css
@@ -142,7 +142,11 @@
 }
 /* Estilo general para el contenedor de la tabla */
 .table-container {
-  overflow-x: auto;
+  scroll= {
+     {
+      y: 300;
+    }
+  } // Ajusta el valor de "y" para el alto deseado
 }
 
 /* Ajuste de la tabla en pantallas pequeñas */
