--- a/src/App.css
+++ b/src/App.css
@@ -146,7 +146,7 @@
      {
       y: 300;
     }
-  } // Ajusta el valor de "y" para el alto deseado
+  } 
 }
 
 /* Ajuste de la tabla en pantallas pequeñas */
